--- a/task.html
+++ b/task.html
@@ -59,6 +59,25 @@
             font-size: 0.9em;
             color: #666;
         }
+
+        .countdown {
+            color: #d9534f;
+            font-size: 0.85em;
+        }
+
+        .back-button {
+            display: inline-block;
+            margin-top: 30px;
+            background: #28a745;
+            color: white;
+            padding: 10px 20px;
+            border-radius: 8px;
+            text-decoration: none;
+        }
+
+        .back-button:hover {
+            background: #1e7e34;
+        }
     </style>
 </head>
 <body>
@@ -67,11 +86,13 @@
 
     <div class="task-form">
         <input type="text" id="taskName" placeholder="Enter task" required>
-        <input type="date" id="dueDate" required>
+        <input type="datetime-local" id="dueDate" required>
         <button onclick="addTask()">Add Task</button>
     </div>
 
     <ul id="taskList"></ul>
+
+    <a href="projects.html" class="back-button">⬅ Back to Projects</a>
 
     <script>
         function addTask() {
@@ -79,12 +100,37 @@
             const dueDate = document.getElementById('dueDate').value;
             if (taskName.trim() === '' || dueDate === '') return;
 
+            const dueTime = new Date(dueDate).getTime();
+
             const li = document.createElement('li');
+            const countdownSpan = document.createElement('span');
+            countdownSpan.className = 'countdown';
             li.innerHTML = `<strong>${taskName}</strong><div class="due-date">Due: ${dueDate}</div>`;
+            li.appendChild(countdownSpan);
             document.getElementById('taskList').appendChild(li);
+
+            updateCountdown(countdownSpan, dueTime);
+            setInterval(() => updateCountdown(countdownSpan, dueTime), 1000);
 
             document.getElementById('taskName').value = '';
             document.getElementById('dueDate').value = '';
+        }
+
+        function updateCountdown(span, dueTime) {
+            const now = new Date().getTime();
+            const distance = dueTime - now;
+
+            if (distance < 0) {
+                span.textContent = " ⏰ Past due";
+                return;
+            }
+
+            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+            span.textContent = ` ⏳ Time left: ${days}d ${hours}h ${minutes}m ${seconds}s`;
         }
     </script>
 
